--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
@@ -19,6 +19,7 @@
     </nav>
     <section class="grid-section  animais" id="animais">
         <h1 class="titulo">Animais Fantasticos</h1>
+        
         <ul>
             <li><img src="./assets/wolves03.jpeg" alt=""></li>
             <li><img src="./assets/wolves1.jpeg" alt=""></li>
