--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <title>Animais Fantásticos</title>
 </head>
 
 <body>
     <nav class="menu">
-        <ul>
+        <ul >
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
@@ -20,7 +21,7 @@
     <section class="grid-section  animais" id="animais">
         <h1 class="titulo">Animais Fantasticos</h1>
         
-        <ul>
+        <ul class="animais-lista"> 
             <li><img src="./assets/wolves03.jpeg" alt=""></li>
             <li><img src="./assets/wolves1.jpeg" alt=""></li>
             <li><img src="./assets/wolves2.jpeg" alt=""></li>
@@ -78,7 +79,7 @@
         </div>
     </section>
     <section class="grid-section  faq" id="faq">
-        <h1>Faq</h1>
+        <h1 class="titulo">Faq</h1>
         <dl>
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio repudiandae in possimus architecto reprehenderit voluptates?</dd>
